--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "bugs": {
     "url": "https://github.com/nikitos3000/frontend-project-44/issues"
   },
-  "homepage": "https://github.com/nikitos3000/frontend-project-44#readme"
-} 
-
+  "homepage": "https://github.com/nikitos3000/frontend-project-44#readme",
+  "dependencies": {
+    "readline-sync": "github:anseki/readline-sync"
+  }
+}
